--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
             ipsum?
           </p>
         </div>
-        <div class="experience"></div>
+        <div class="experience">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni dolores, in, velit illo rem nihil dignissimos laborum repudiandae eaque, fugit debitis aspernatur? Quia debitis nesciunt exercitationem, quis reiciendis deleniti distinctio.
+        </div>
       </section>
     </main>
     <footer></footer>
